# libweicws

./: .travis.yml  CMakeLists.txt  COPYING  README.md  index.html  params.json
PYTHON/: README.md  weicws.i
python/: pyweicws.h  setup.py  weicws.i
src/: CMakeLists.txt  core.cpp  core.h  encode.cpp  weicws.cpp  weicws.h
src/utils/: chartypes_utf8.h  chartypes_utf8_ext.h  hash_map.hpp  ul_strlib_x.cpp  ul_strlib_x.h  utf.h
src2/: CMakeLists.txt  encode.cc
test/: CMakeLists.txt  demo.cpp  multi_demo.cpp
tools/script/: chartypes_utf8.py  extract-features.py  rulews_engine.py  ws.py
