PROJECT (libweicws)

#SET(CMAKE_C_FLAGS           "$ENV{CXXFLAGS} -g -O3 -fPIC")
#SET(CMAKE_C_FLAGS           "$ENV{CXXFLAGS} -g -O3 -fPIC")

SET(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/bin)
SET(INCLUDE_OUTPUT_PATH     ${PROJECT_SOURCE_DIR}/include)
SET(LIBRARY_OUTPUT_PATH     ${PROJECT_SOURCE_DIR}/lib)
SET(SOURCE                  ${PROJECT_SOURCE_DIR}/src)
SET(PROJECT_BINARY_DIR      ${SOURCE}/internal)
SET(THIRDPARTY_DIR          ${PROJECT_SOURCE_DIR}/thirdparty)

ADD_SUBDIRECTORY(thirdparty)
ADD_SUBDIRECTORY(src)
# ADD_SUBDIRECTORY(src2)

CONFIGURE_FILE(
    ${SOURCE}/weicws.h
    ${PROJECT_BINARY_DIR}/weicws.h)

ADD_SUBDIRECTORY(test)
