PROJECT (libweicws)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)
#SET(CMAKE_C_FLAGS           "$ENV{CXXFLAGS} -g -O3 -fPIC")
#SET(CMAKE_C_FLAGS           "$ENV{CXXFLAGS} -g -O3 -fPIC")
set(CMAKE_C_FLAGS           "${CMAKE_C_FLAGS} -std=c99")
SET(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/bin)
SET(INCLUDE_OUTPUT_PATH     ${PROJECT_SOURCE_DIR}/include)
SET(LIBRARY_OUTPUT_PATH     ${PROJECT_SOURCE_DIR}/lib)
SET(SOURCE                  ${PROJECT_SOURCE_DIR}/src)
SET(THIRDPARTY_DIR          ${PROJECT_SOURCE_DIR}/thirdparty)

ADD_SUBDIRECTORY(thirdparty)
ADD_SUBDIRECTORY(src)
# ADD_SUBDIRECTORY(src2)

CONFIGURE_FILE(
    ${SOURCE}/weicws.h
    ${INCLUDE_OUTPUT_PATH}/weicws.h)

ADD_SUBDIRECTORY(test)
